discussion/kv_engine/176712/176712_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52490: Pass Producer to BackfillManagerTask

The ownership hierarchy is the following:

  Producer
    -> BackfillManager
    -> BackfillTask

, with Task that stores a weak reference to Manager.

That model allows scenarios where a Producer connection has gone but
Task/Manager are still alive. Task needs to run a backfill for
realizing that the connection has been removed.

With this change we simplify the ownership model by givin Task a direct
weak reference to Producer.
That way, Task would also spot a dead Producer (and thus cancel itself)
before entering any backfill scan-loop.

Change-Id: I436cf6a7d5b5ebba6a913aa1e803c5c31dfaeac1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-06-27 09:28:04.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-06-27 09:28:17.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/304204/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-27 10:04:03.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/403/ : ABORTED

Failure of GoogleTest "SingleThreadedEphemeralTest.RangeIteratorVBDeleteRaceTest":

<pre>
[ RUN      ] SingleThreadedEphemeralTest.RangeIteratorVBDeleteRaceTest
unknown file: error: SEH exception with code 0xc0000005 thrown in the test body.
[  FAILED  ] SingleThreadedEphemeralTest.RangeIteratorVBDeleteRaceTest (7 ms)
SingleThreadedEphemeralTest.RangeIteratorVBDeleteRaceTest
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/403/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/403/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/304/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/304/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/295/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/295/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/312/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/312/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/302/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/302/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/302/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/302/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/293/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:141:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->schedule(managerTask);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:210:17: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
                ExecutorPool::get()->wake(managerTask->getId());
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:363:9: error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
        ExecutorPool::get()->wake(managerTask->getId());
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/293/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/dcp/backfill-manager.cc:137:9:
error: use of undeclared identifier "ExecutorPool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/293/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/291/ : FAILURE

Test exceeded the timeout:
[2022-06-27T10:00:00.715Z] Running [64/93]: dcp failover log.../usr/bin/timeout: the monitored command dumped core ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/291/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/433/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/433/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17470/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
